--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>red_line</title>
 </head>
     <body>
+        <header>
+            <div id="background_foreach"></div>
+            <div id="header_foreach">
+                <div>
+                    <p>Menu</p>
+                </div>
+                <div>
+                    <h1>ForEach Info</h1>
+                </div>
+                 <div>
+                    <p>L'info en continu 7j/7</p>
+                </div>
+               
+                    <div>
+                        <p>S'abonner</p>
+                    </div>
+                </div> 
+        </header>
     
     </body>
 </html>
