--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
         <header>
             <div id="background_foreach"></div>
             <div id="header_foreach">
-                <div>
+                <div id="header_menu">
                     <p>Menu</p>
                 </div>
-                <div>
+                <div>  
                     <h1>ForEach Info</h1>
                 </div>
-                 <div>
+                <div>
                     <p>L'info en continu 7j/7</p>
                 </div>
-               
-                    <div>
-                        <p>S'abonner</p>
-                    </div>
+                <div id="header_abonner">
+                    <p>S'abonner</p>
                 </div> 
+            </div> 
         </header>
     
     </body>
