Ajout et structure de l'image menu

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div id="background_foreach"></div>
             <div id="header_foreach">
                 <div id="header_menu">
+                    <img src="./assets/images/menu.png" alt="" id="image_menu">
                     <p>Menu</p>
                 </div>
                 <div>  
