Ajout des class dans le header

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <div id="header_foreach">
                 <div id="header_menu">
                     <img src="./assets/images/menu.png" alt="" id="image_menu">
-                    <p>Menu</p>
+                    <p class="mobilenon">Menu</p>
                 </div>
                 <div>  
                     <h1>ForEach Info</h1>
                 </div>
                 <div>
-                    <p>L'info en continu 7j/7</p>
+                    <p class="mobilenon">L'info en continu 7j/7</p>
                 </div>
                 <div id="header_abonner">
-                    <p>S'abonner</p>
+                    <p class="mobilenon">S'abonner</p>
                 </div> 
             </div> 
         </header>
