Ajout de la nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>red_line</title>
 </head>
     <body>
-    
+        <nav>
+            <div id="navigateur_content">
+               <ul id="navigateur_liste">
+                <li id="liste">Culture</li>
+                <li class="liste">Science & Vie</li>
+                <li class="liste">Sports</li>
+               </ul>
+            </div>
+        </nav>
     </body>
 </html>
