Ajout du main et la premiere liste

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>red_line</title>
 </head>
     <body>
+        <main>
+            <div id="titreculture">
+                <span>Culture</span>
+            </div>
+            <div id="premiere_liste_culture">
+                <ul>
+                    <li>
+                        <img src="./assets/images/free_sfr.jpg" alt="sfr" class="imageculture">
+                        <p class="textculture">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/livres.jpeg" alt="livres" class="imageculture">
+                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/serie_canal_plus.jpg" alt="canalplus" class="imageculture">
+                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/chef_tiktok.jpeg" alt="cheffetiktok" class="imageculture">
+                        <p class="textculture">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                    </li>
+                </ul>
+            </div>
+        </main>
     
     </body>
 </html>
