Ajout de la deuxieme liste dans le main

--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
                     </li>
                 </ul>
             </div>
+
+            <div id="titre_science_et_vie">
+                <span>Science & Vie</span>
+            </div>
+            <div id="deuxieme_liste_sv">
+                <ul>
+                    <li>
+                        <img src="./assets/images/mimas_lune.jpg" alt="lune" class="imagesv">
+                        <p class="textculture">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/papillon.jpg" alt="papillon" class="imagesv">
+                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/alaska.jpeg" alt="alaska" class="imagesv">
+                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/virus.jpg" alt="virus" class="imagesv">
+                        <p class="textculture">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                    </li>
+                </ul>
+            </div>
         </main>
     
     </body>
