--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <ul>
                     <li>
                         <img src="./assets/images/free_sfr.jpg" alt="sfr" class="imageculture">
-                        <p class="textculture">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
                     </li>
                     <li>
                         <img src="./assets/images/livres.jpeg" alt="livres" class="imageculture">
-                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
                     </li>
                     <li>
                         <img src="./assets/images/serie_canal_plus.jpg" alt="canalplus" class="imageculture">
-                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
                     </li>
                     <li>
                         <img src="./assets/images/chef_tiktok.jpeg" alt="cheffetiktok" class="imageculture">
-                        <p class="textculture">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
                     </li>
                 </ul>
             </div>
@@ -39,19 +39,42 @@
                 <ul>
                     <li>
                         <img src="./assets/images/mimas_lune.jpg" alt="lune" class="imagesv">
-                        <p class="textculture">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
                     </li>
                     <li>
                         <img src="./assets/images/papillon.jpg" alt="papillon" class="imagesv">
-                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
                     </li>
                     <li>
                         <img src="./assets/images/alaska.jpeg" alt="alaska" class="imagesv">
-                        <p class="textculture">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
                     </li>
                     <li>
                         <img src="./assets/images/virus.jpg" alt="virus" class="imagesv">
-                        <p class="textculture">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                    </li>
+                </ul>
+            </div>
+            <div id="titre_sport">
+                <span>Sport</span>
+            </div>
+            <div id="troisieme_liste_sport">
+                <ul>
+                    <li>
+                        <img src="./assets/images/footballers.jpg" alt="foot" class="imagesport">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/baseball.jpg" alt="baseball" class="imagesport">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/kameto.jpg" alt="kameto" class="imagesport">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                    </li>
+                    <li>
+                        <img src="./assets/images/judo.jpg" alt="judo" class="imagesport">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
                     </li>
                 </ul>
             </div>
