Ajout du footer et son text

--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@
                 </ul>
             </div>
         </main>
+        <footer>
+            <div id="texte_footer">
+                <div>Qui sommes-nous?</div>
+                <div>CGVU</div>
+                <div>Mentions Legales</div>
+                <div>Politique de Confidentialite</div>
+                <div>Parametrer les cookies</div>
+            </div>
+        </footer>
     
     </body>
 </html>
