Ajout des id et class dans le footer

--- a/index.html
+++ b/index.html
@@ -107,12 +107,24 @@
             </div>
         </main>
         <footer>
-            <div id="texte_footer">
-                <div>Qui sommes-nous?</div>
-                <div>CGVU</div>
-                <div>Mentions Legales</div>
-                <div>Politique de Confidentialite</div>
-                <div>Parametrer les cookies</div>
+            <div id="block_footer">
+                <ul id="liste_footer">
+                    <li class="texte_footer">
+                        Qui sommes-nous?
+                    </li>
+                    <li class="texte_footer">
+                        CGVU
+                    </li>
+                    <li class="texte_footer">
+                        Mentions Legales
+                    </li>
+                    <li class="texte_footer">
+                        Politique de Confidentialite
+                    </li>
+                    <li class="texte_footer">
+                        Parametrer les cookies
+                    </li>
+                </ul>
             </div>
         </footer>
     
