Ajout des class dans les span de texte

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <ul>
                     <li>
                         <img src="./assets/images/free_sfr.jpg" alt="sfr" class="imageculture">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span> Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
                     </li>
                     <li>
                         <img src="./assets/images/livres.jpeg" alt="livres" class="imageculture">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
                     </li>
                     <li>
                         <img src="./assets/images/serie_canal_plus.jpg" alt="canalplus" class="imageculture">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
                     </li>
                     <li>
                         <img src="./assets/images/chef_tiktok.jpeg" alt="cheffetiktok" class="imageculture">
-                        <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
                     </li>
                 </ul>
             </div>
@@ -39,19 +39,19 @@
                 <ul>
                     <li>
                         <img src="./assets/images/mimas_lune.jpg" alt="lune" class="imagesv">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
                     </li>
                     <li>
                         <img src="./assets/images/papillon.jpg" alt="papillon" class="imagesv">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
                     </li>
                     <li>
                         <img src="./assets/images/alaska.jpeg" alt="alaska" class="imagesv">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
                     </li>
                     <li>
                         <img src="./assets/images/virus.jpg" alt="virus" class="imagesv">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                        <p> <span class="texte_main">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
                     </li>
                 </ul>
             </div>
@@ -62,19 +62,19 @@
                 <ul>
                     <li>
                         <img src="./assets/images/footballers.jpg" alt="foot" class="imagesport">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
+                        <p><span class="texte_main">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>Perspiciatis fuga asperiores, eligendi repellat dolorum similique ratione et quibusdam itaque aut.</p>
                     </li>
                     <li>
                         <img src="./assets/images/baseball.jpg" alt="baseball" class="imagesport">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
+                        <p><span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Animi repellat ad quisquam rerum dolorum, hic labore nulla aliquid optio est!</p>
                     </li>
                     <li>
                         <img src="./assets/images/kameto.jpg" alt="kameto" class="imagesport">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
+                        <p><span class="texte_main">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Quisquam modi veniam aspernatur eaque cum. Sint cum tenetur placeat impedit libero!</p>
                     </li>
                     <li>
                         <img src="./assets/images/judo.jpg" alt="judo" class="imagesport">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
+                        <p><span class="texte_main">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span>Velit, fuga maxime! Harum veniam quidem sed impedit, autem cum eos ducimus.</p>
                     </li>
                 </ul>
             </div>
